# markwork

./: .gitignore  .readthedocs.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VERSION  build_docs.sh  changelog.md  coverage_test.sh  environment.yml  pyproject.toml  version_bump.py  version_get.py
.github/workflows/: dev.yml  lts.yml  rc.yml
docs/: conf.py  index.rst
src/markwork/: __init__.py  _gen.py
src/markwork/_static/: markwork.css
src/markwork/engine/: __init__.py  _abs_module.py  _add_alias_site.py  _bound_anywhere.py  _builtin_links.py  _css_class.py  _detect_package.py  _generate.py  _highlight.py  _is_stdlib.py  _line_starts.py  _merge_tokens.py  _module_definitions.py  _nested_bound.py  _parse_init.py  _pydocs.py  _source_docs.py  _title.py  _token_html.py  _top_level_def_lines.py  _top_level_defs.py
src/markwork/etc/: markwork.css
tests/: _support.py  test_abs_module.py  test_anchors.py  test_append_section.py  test_bound_anywhere.py  test_builtin_links.py  test_css_class.py  test_definition_links.py  test_detect_package.py  test_emit_package.py  test_emit_tests.py  test_highlight.py  test_is_stdlib.py  test_line_starts.py  test_merge_tokens.py  test_module_definitions.py  test_nested_bound.py  test_network_anchors.py  test_no_regex.py  test_parse_init.py  test_paths.py  test_run.py  test_scan_usages.py  test_setup.py  test_token_html.py  test_top_level.py
